Make navigation links render dynamically and by order attribute in page itself

--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Blog
+order: 3
 ---
 
 <div class="content" style="grid-column: 1/2; background: gray">
@@ -9,7 +10,7 @@ title: Blog
         <p class="post-modal__meta">Posted by <span class="post-modal__meta__author">Ahmed khaled</span> on November 1, 2018</p>
         <p class="post-modal__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente molestias esse commodi quos pariatur atque quo iusto repellendus, asperiores corporis cumque saepe itaque nisi nobis aliquam excepturi nemo ratione perspiciatis.</p>
         <a class="post-modal__link" href="#">Read More</a>
-    </div>    
+    </div>
 </div>
 
 
